--- a/user.html
+++ b/user.html
@@ -263,7 +263,7 @@
         }
 
         // 데이터를 가져와서 해당 사용자의 스탯 표시
-        fetch('match.csv')
+        fetch('https://yusi0.github.io/KPFM/match.csv')
             .then(response => response.text())
             .then(data => {
                 const rows = data.trim().split('\n');
