--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             margin: 0;
             color: #E0E0E0;
             /* 밝은 텍스트 */
+            padding-right: 15px;
+            /* 추가된 내부 여백 */
         }
 
         .container {
@@ -26,6 +28,13 @@
             padding: 30px;
             margin: 30px auto;
             overflow: hidden;
+            padding-right: 20px;
+            /* 컨테이너 내부 우측 여백 */
+        }
+
+        html,
+        body {
+            overflow-x: hidden;
         }
 
         h1 {
@@ -68,7 +77,8 @@
             margin-top: 20px;
             background-color: #1E1E1E;
             border-radius: 8px;
-            overflow: hidden;
+            width: 100%;
+            overflow-x: auto;
         }
 
         th,
