--- a/user.html
+++ b/user.html
@@ -14,6 +14,9 @@
             /* 다크모드 배경색 */
             margin: 0;
             color: #E0E0E0;
+            display: flex;
+            justify-content: center;
+            /* 가로 중앙 정렬 */
             /* 밝은 텍스트 */
         }
 
@@ -25,7 +28,7 @@
             border-radius: 12px;
             box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
             padding: 30px;
-            margin: 30px auto;
+            margin: 20px;
             overflow: hidden;
 
             /* 추가된 스타일 */
